--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/inventory
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://https://db4free.net/phpMyAdmin/index.php?route=/database/structure&server=1&db=inventory_test00
+spring.datasource.username=vader89  
+spring.datasource.password=aldo0709
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
